--- a/cs/catalog/templates/index.html
+++ b/cs/catalog/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "base.html" %}
 
 {% block content %}
   <h1>NYmed Scripts Home</h1>
@@ -6,7 +6,7 @@
   <h2>Dynamic content</h2>
   <p>The database has the following record counts:</p>
   <ul>
-    <li><strong>Patients Registered:</strong> {{ num_patients }}</li>
-    <li><strong>Doctors:</strong> {{ num_doctors }}</li>
+    <li><strong>Total Patients :</strong> {{ num_patients }}</li>
+    <li><strong>Total Doctors :</strong> {{ num_doctors }}</li>
   </ul>
 {% endblock %}
