added patient, doctor templates

--- a/cs/catalog/templates/base.html
+++ b/cs/catalog/templates/base.html
@@ -16,8 +16,8 @@
       {% block sidebar %}
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All Patients</a></li>
-          <li><a href="">All Doctors</a></li>
+          <li><a href="{% url 'patients' %}">All Patients</a></li>
+          <li><a href="{% url 'doctors' %}">All Doctors</a></li>
         </ul>
      {% endblock %}
       </div>
