--- a/cs/catalog/templates/index.html
+++ b/cs/catalog/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>NYmed Scripts Home</h1>
+  <h1>NYmed Scripts</h1>
   <p><em>Welcome to NYmed Scripts</em>!!!</p>
   <h2>Dynamic content</h2>
   <p>The database has the following record counts:</p>
