--- a/cs/catalog/templates/catalog/patient_detail.html
+++ b/cs/catalog/templates/catalog/patient_detail.html
@@ -12,7 +12,7 @@
     {% for p in patient.prescription_set.all %}
       <hr>
       <p><strong>Doctor: </strong> {{p.doctor}}</p>
-      <p><strong>Prescription: </strong> {{p.desc}}</p>
+      <p><strong>Medication Details: </strong> {{p.desc}}</p>
     {% endfor %}
   </div>
 
