--- a/cs/catalog/templates/base.html
+++ b/cs/catalog/templates/base.html
@@ -20,6 +20,17 @@
           <li><a href="{% url 'doctors' %}">All Doctors</a></li>
         </ul>
      {% endblock %}
+        <ul class="sidebar-nav">
+
+         {% if user.is_authenticated %}
+           <li>User: {{ user.get_username }}</li>
+           <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+         {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          {% endif %}
+         </ul>
+
+
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}
       {% block pagination %}
